fix actions position on mobile

--- a/site/wwwroot/css/site.less
+++ b/site/wwwroot/css/site.less
@@ -378,7 +378,7 @@ html, body, .canvas {
             padding: 0 16px 16px;
             height: 48px;
             line-height: 32px;
-            width: 215px;
+            width: 100%;
 
             .transition(all ease 0.5s);
 
@@ -386,6 +386,7 @@ html, body, .canvas {
                 left: auto;
                 right: 0;
                 bottom: 0;
+                width: 215px;
             }
 
             &.out {
